# LightGbm

./: .gitignore  README.md
source/: AutoProgramming.cpp  AutoProgramming.h  Booster.cpp  Booster.h  BoosterParams.cpp  BoosterParams.h  CMakeLists.txt  Dataset.cpp  Dataset.h  Exports.h  FeatureInteractions.cpp  FeatureInteractions.h  GbmTree.cpp  GbmTree.h  LightGbm.cpp  LightGbm.h  LightGbm.sln  LightGbm.vcxproj  LightGbm.vcxproj._user  LightGbm.vcxproj.filters  Makefile  TypeDefs.h  build.sh  pc.h
